--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,2 @@
-DB_ENGINE="django.db.backends.postgresql_psycopg2"
+DB_ENGINE=""
 DB_NAME=""
-DB_USER=""
-DB_PASSWORD=""
-DB_HOST=""
-DB_PORT=""
-
-EMAIL_HOST_USER=""
-EMAIL_HOST_PASSWORD=""
